yaml/nginx-jsonld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webserver
  labels:
    app: nginx
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - mountPath: /usr/share/nginx/html  # Serve static content
              name: web-content
      volumes:
        - name: web-content
          persistentVolumeClaim:
            claimName: nginx-nfs-storage-pvc  # Using existing PVC
