yaml/mosquitto-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-external
  namespace: mqtt
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
    nodePort: 31883
  type: NodePort
