yaml/nginx-jsonld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-jsonld-service
spec:
  selector:
    app: nginx
  type: NodePort  # or ClusterIP / NodePort based on your need
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
