yaml/nginx-jsonld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Let's Encrypt certificate issuer
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
    - hosts:
        - jsonld.sensorsreport.com
      secretName: jsonld-tls-secret  # TLS Secret for HTTPS
  rules:
    - host: jsonld.sensorsreport.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
